Styled about, post, tale, home.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,8 @@
 
   <div class="wrapper">
 
-    <p>{{ site.description | escape }}</p>
+    <p>El contenido de esta página está bajo licencia <a
+      href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY 4.0</a>
 
   </div>
 
