--- a/_sass/typewriter.sass
+++ b/_sass/typewriter.sass
@@ -1,5 +1,11 @@
 @import 'bourbon/bourbon'
 
+$header-height: 100px
+$footer-height: 70px
+
+@viewport
+  width: device-width
+
 *
   font-family: inherit
   margin: 0
@@ -16,25 +22,88 @@ body
   text-rendering: optimizeLegibility
   text-rendering: geometricPrecision
   font-feature-settings: "kern" 1, "liga" 1
+  max-width: 720px
+  +margin(0 auto)
+
+h1, h2, h3, h4, h5, h6
+  +margin(0 0 .5em)
+
+/* anchors */
+a[href] 
+  color: inherit
+  text-decoration: none
+  text-shadow: none
+  /*display: inline-block*/
+
+a[href^="#"] 
+  background: inherit
+  border-bottom: 1px dotted rgba(0,0,0,0.1)
+
+a[href]:hover 
+  color: #000
+
+a[href^="#"]:hover 
+  background: inherit
+  border-color: black
+
+a.img
+  border: none
+  background: transparent !important 
+
+/* anchors: headings */
+h1, h2, h3, h4, h5, h6
+  & > a
+    color: inherit !important
+
+    &:hover
+      color: inherit !important
+
+p
+  +margin(null null 2rem)
+
 
 .wrapper
-  max-width: 720px
-  width: 100%
-  margin: 0 auto
+  +margin(0 2rem)
 
 .site-header
+  // color: #040404
+  color: #aaa
+  opacity: .1
+
+  &:hover
+    opacity: 1
+
+    .site-header__title
+      color: #040404
+
   .wrapper
-    height: 100px
+    height: $header-height
     +display(flex)
-    +justify-content(space-between)
+    +flex-direction(column)
+    +margin(16px null)
+    +justify-content(space-around)
+
+  &__title,
+  &__nav
+    height: 100%
 
   &__title
     +display(flex)
-    +flex(1)
     +flex-direction(column)
     +justify-content(center)
+    +margin(0)
+    // +transition(font 0.3s ease)
+
+    i
+      font-style: inherit
+
+    // &:hover
+    //   font-size: 34px
 
   &__nav
+    color: #aaa
+    // opacity: 0.1
+
     ul
       +align-items(stretch)
       +display(flex)
@@ -48,11 +117,54 @@ body
       +justify-content(center)
 
 .page-content
-  min-height: calc(100vh - 170px)
+  min-height: calc(100vh - 206px)
 
   .wrapper
-    +margin(0 auto 3rem auto)
+    +margin(0 null 3em)
 
 .site-footer
-  font-size: 12px
+  color: #ccc
+  font-size: 14px
   height: 70px
+
+  .wrapper
+    height: 100%
+    +display(flex)
+    +align-items(center)
+
+  a
+    text-decoration: underline
+
+  p
+    +margin(null null 0)
+
+.post-preview
+  +margin(0 0 2.5em)
+
+  &> a 
+    color: inherit
+    text-shadow: none
+    display: block
+
+  &__heading
+    display: inline-block
+
+  &:hover 
+    .post-preview__heading
+      background-color: black
+      color: white
+
+/* Home modififer */
+.home
+
+  .site-header
+    opacity: 1
+    
+    &__title
+      color: #040404
+
+@media only screen and (min-device-width: 568px)
+  .site-header
+    .wrapper
+      +flex-direction(row)
+      +justify-content(space-between)
