--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,25 @@
 ---
 layout: default
 ---
-
-<h2>{{ page.title }}</h2>
-
-{{ content }}
+<div class="post">
+  <header class="post__header">
+    <h2 class="post__header__heading">
+      {{ page.title }}
+    </h2>
+    <p class="post__header__subheading">
+      {{ page.date | date: "%e %B %Y"
+        | replace:"January","Enero"
+        | replace:"February","Febrero"
+        | replace:"March","Marzo"
+        | replace:"May","Mayo"
+        | replace:"June","Junio"
+        | replace:"July","Julio"
+        | replace:"August","Agosto"
+        | replace:"September","Septiembre"
+        | replace:"October","octubre"
+        | replace:"November","noviembre"
+        | replace:"December","Diciembre" }}
+    </p>
+  </header>
+  {{ content }}
+</div>
