--- a/_sass/typewriter.sass
+++ b/_sass/typewriter.sass
@@ -28,12 +28,29 @@ body
 h1, h2, h3, h4, h5, h6
   +margin(0 0 .5em)
 
+  &> a
+    background-color: transition !important
+    color: inherit !important
+
+    &:hover
+      background-color: transition !important
+      color: inherit !important
+
+img
+  border: none
+  max-width: 100%
+
 /* anchors */
 a[href] 
   color: inherit
   text-decoration: none
-  text-shadow: none
+  padding-bottom: 0.025em
   /*display: inline-block*/
+  background-image: linear-gradient(to bottom, rgba(0,0,0,.5) 50%, rgba(0,0,0,0) 50%)
+  background-repeat: repeat-x
+  background-size: 2px .1em
+  background-position: 0 1.025em
+  text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff
 
 a[href^="#"] 
   background: inherit
@@ -41,6 +58,7 @@ a[href^="#"]
 
 a[href]:hover 
   color: #000
+  background-image: linear-gradient(to bottom, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 50%)
 
 a[href^="#"]:hover 
   background: inherit
@@ -85,7 +103,7 @@ p
 
   &__title,
   &__nav
-    height: 100%
+    // height: 100%
 
   &__title
     +display(flex)
@@ -116,11 +134,25 @@ p
       +flex-direction(column)
       +justify-content(center)
 
+    a[href]
+      text-rendering: geometricPrecision
+
+  a[href]
+    background: none
+    text-decoration: none
+    text-shadow: none
+
+    &:hover
+      background: none
+
 .page-content
   min-height: calc(100vh - 206px)
 
   .wrapper
     +margin(0 null 3em)
+
+  img
+    display: block
 
 .site-footer
   color: #ccc
@@ -142,20 +174,42 @@ p
   +margin(0 0 2.5em)
 
   &> a 
+    background: none
     color: inherit
-    text-shadow: none
     display: block
+    text-shadow: none
+
+    &:hover
+      background: none
 
   &__heading
     display: inline-block
+    +margin(null null 0)
+
+  &__subheading
+    color: #aaa
+    display: block
+    font-size: 14px
+    +margin(null null .5rem)
+
+  &__body
+    p
+      +margin(null null 0)
 
   &:hover 
     .post-preview__heading
       background-color: black
       color: white
 
-/* Home modififer */
-.home
+/* post */
+.post
+  &__header
+    &__subheading
+      color: #aaa
+      font-size: 14px
+
+/* main modififer */
+.main
 
   .site-header
     opacity: 1
