--- a/_sass/typewriter.sass
+++ b/_sass/typewriter.sass
@@ -84,15 +84,7 @@ p
   +margin(0 2rem)
 
 .site-header
-  // color: #040404
-  color: #aaa
-  opacity: .1
-
-  &:hover
-    opacity: 1
-
-    .site-header__title
-      color: #040404
+  color: #040404
 
   .wrapper
     height: $header-height
@@ -100,10 +92,6 @@ p
     +flex-direction(column)
     +margin(16px null)
     +justify-content(space-around)
-
-  &__title,
-  &__nav
-    // height: 100%
 
   &__title
     +display(flex)
@@ -120,12 +108,12 @@ p
 
   &__nav
     color: #aaa
-    // opacity: 0.1
 
     ul
       +align-items(stretch)
       +display(flex)
       +flex(1)
+      +flex-direction(row-reverse)
       height: 100%
 
     li
@@ -135,6 +123,7 @@ p
       +justify-content(center)
 
     a[href]
+      +margin(0 .8em)
       text-rendering: geometricPrecision
 
   a[href]
@@ -170,7 +159,8 @@ p
   p
     +margin(null null 0)
 
-.post-preview
+.post-preview,
+.tale-preview
   +margin(0 0 2.5em)
 
   &> a 
@@ -202,20 +192,11 @@ p
       color: white
 
 /* post */
-.post
+.post, .tale
   &__header
     &__subheading
       color: #aaa
       font-size: 14px
-
-/* main modififer */
-.main
-
-  .site-header
-    opacity: 1
-    
-    &__title
-      color: #040404
 
 @media only screen and (min-device-width: 568px)
   .site-header
