--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -7,7 +7,7 @@ layout: page
 <h2>Lo que estoy leyendo ahora</h2>
       <!-- Show static HTML/CSS as a placeholder in case js is not enabled - javascript include will override this if things work -->
       <style type="text/css" media="screen">
-  .gr_custom_container_1486939543 {
+  .gr_custom_container_1487339563 {
     /* customize your Goodreads widget container here*/
     border: 0px solid gray;
     border-radius:10px;
@@ -17,13 +17,13 @@ layout: page
     display: flex;
     flex-wrap: wrap;
   }
-  .gr_custom_header_1486939543 {
+  .gr_custom_header_1487339563 {
     /* customize your Goodreads header here*/
     width: 100%;
     margin-bottom: 5px;
     display: none;
   }
-  .gr_custom_each_container_1486939543 {
+  .gr_custom_each_container_1487339563 {
     /* customize each individual book container here */
     width: 100%;
     clear: both;
@@ -32,7 +32,7 @@ layout: page
     padding-bottom: 4px;
     flex: 1 0 100%;
   }
-  .gr_custom_book_container_1486939543 {
+  .gr_custom_book_container_1487339563 {
     /* customize your book covers here */
     overflow: hidden;
     height: 160px;
@@ -40,16 +40,16 @@ layout: page
       margin-right: 4px;
       width: 98px;
   }
-  .gr_custom_author_1486939543 {
+  .gr_custom_author_1487339563 {
     /* customize your author names here */
     font-size: 10px;
   }
-  .gr_custom_tags_1486939543 {
+  .gr_custom_tags_1487339563 {
     /* customize your tags here */
     font-size: 10px;
     color: gray;
   }
-  .gr_custom_rating_1486939543 {
+  .gr_custom_rating_1487339563 {
     /* customize your rating stars here */
     float: right;
   }
@@ -58,48 +58,59 @@ layout: page
   }
 
   @media only screen and (min-device-width: 568px) {
-    .gr_custom_each_container_1486939543 {
+    .gr_custom_each_container_1487339563 {
       flex: 1 0 50%;
     }
   }
 </style>
 
-      <div id="gr_custom_widget_1486939543">
-          <div class="gr_custom_container_1486939543">
-    <h2 class="gr_custom_header_1486939543">
-    <a style="text-decoration: none;" href="https://www.goodreads.com/review/list/64896106-enrique-moriarty?shelf=currently-reading&amp;utm_medium=api&amp;utm_source=custom_widget">Leyendo actualmente</a>
+    <div id="gr_custom_widget_1487339563">
+          <div class="gr_custom_container_1487339563">
+    <h2 class="gr_custom_header_1487339563">
+    <a style="text-decoration: none;" href="https://www.goodreads.com/review/list/64896106-enrique-moriarty?shelf=currently-reading&amp;utm_medium=api&amp;utm_source=custom_widget">Enrique&#39;s bookshelf: currently-reading</a>
     </h2>
-      <div class="gr_custom_each_container_1486939543">
-          <div class="gr_custom_book_container_1486939543">
+      <div class="gr_custom_each_container_1487339563">
+          <div class="gr_custom_book_container_1487339563">
             <a title="La subasta del lote 49" href="https://www.goodreads.com/review/show/1910938541?utm_medium=api&amp;utm_source=custom_widget"><img alt="La subasta del lote 49" border="0" src="https://images.gr-assets.com/books/1347773103m/9821325.jpg" /></a>
           </div>
-          <div class="gr_custom_title_1486939543">
+          <div class="gr_custom_title_1487339563">
             <a href="https://www.goodreads.com/review/show/1910938541?utm_medium=api&amp;utm_source=custom_widget">La subasta del lote 49</a>
           </div>
-          <div class="gr_custom_author_1486939543">
+          <div class="gr_custom_author_1487339563">
             by <a href="https://www.goodreads.com/author/show/235.Thomas_Pynchon">Thomas Pynchon</a>
           </div>
       </div>
-      <div class="gr_custom_each_container_1486939543">
-          <div class="gr_custom_book_container_1486939543">
+      <div class="gr_custom_each_container_1487339563">
+          <div class="gr_custom_book_container_1487339563">
             <a title="Saint Exupéry: El último vuelo" href="https://www.goodreads.com/review/show/1910948471?utm_medium=api&amp;utm_source=custom_widget"><img alt="Saint Exupéry: El último vuelo" border="0" src="https://images.gr-assets.com/books/1482962029m/12824693.jpg" /></a>
           </div>
-          <div class="gr_custom_title_1486939543">
+          <div class="gr_custom_title_1487339563">
             <a href="https://www.goodreads.com/review/show/1910948471?utm_medium=api&amp;utm_source=custom_widget">Saint Exupéry: El último vuelo</a>
           </div>
-          <div class="gr_custom_author_1486939543">
+          <div class="gr_custom_author_1487339563">
             by <a href="https://www.goodreads.com/author/show/219215.Hugo_Pratt">Hugo Pratt</a>
           </div>
       </div>
-      <div class="gr_custom_each_container_1486939543">
-          <div class="gr_custom_book_container_1486939543">
+      <div class="gr_custom_each_container_1487339563">
+          <div class="gr_custom_book_container_1487339563">
             <a title="Trece monos" href="https://www.goodreads.com/review/show/1911152432?utm_medium=api&amp;utm_source=custom_widget"><img alt="Trece monos" border="0" src="https://images.gr-assets.com/books/1435059505m/25780018.jpg" /></a>
           </div>
-          <div class="gr_custom_title_1486939543">
+          <div class="gr_custom_title_1487339563">
             <a href="https://www.goodreads.com/review/show/1911152432?utm_medium=api&amp;utm_source=custom_widget">Trece monos</a>
           </div>
-          <div class="gr_custom_author_1486939543">
+          <div class="gr_custom_author_1487339563">
             by <a href="https://www.goodreads.com/author/show/1233506.C_sar_Mallorqu_">César Mallorquí</a>
+          </div>
+      </div>
+      <div class="gr_custom_each_container_1487339563">
+          <div class="gr_custom_book_container_1487339563">
+            <a title="Maquiavelo" href="https://www.goodreads.com/review/show/1916166316?utm_medium=api&amp;utm_source=custom_widget"><img alt="Maquiavelo" border="0" src="https://s.gr-assets.com/assets/nophoto/book/111x148-bcc042a9c91a29c1d680899eff700a03.png" /></a>
+          </div>
+          <div class="gr_custom_title_1487339563">
+            <a href="https://www.goodreads.com/review/show/1916166316?utm_medium=api&amp;utm_source=custom_widget">Maquiavelo</a>
+          </div>
+          <div class="gr_custom_author_1487339563">
+            by <a href="https://www.goodreads.com/author/show/19073.Quentin_Skinner">Quentin Skinner</a>
           </div>
       </div>
   <br style="clear: both"/>
@@ -112,4 +123,4 @@ layout: page
   </div>
 
       </div>
-      <script src="https://www.goodreads.com/review/custom_widget/64896106.Leyendo%20actualmente?cover_position=left&cover_size=medium&num_books=5&order=a&shelf=currently-reading&show_author=1&show_cover=1&show_rating=0&show_review=0&show_tags=0&show_title=1&sort=date_added&widget_bg_color=FFFFFF&widget_bg_transparent=true&widget_border_width=none&widget_id=1486939543&widget_text_color=000000&widget_title_size=small&widget_width=full" type="text/javascript" charset="utf-8"></script>
+      <script src="https://www.goodreads.com/review/custom_widget/64896106.Enrique's%20bookshelf:%20currently-reading?cover_position=left&cover_size=medium&num_books=5&order=a&shelf=currently-reading&show_author=1&show_cover=1&show_rating=0&show_review=0&show_tags=0&show_title=1&sort=date_added&widget_bg_color=FFFFFF&widget_bg_transparent=true&widget_border_width=1&widget_id=1487339563&widget_text_color=000000&widget_title_size=medium&widget_width=medium" type="text/javascript" charset="utf-8"></script>
