--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,9 @@
     </main>
 
     {% include footer.html %}
-    {% include analytics.html %}
+    {% if jekyll.environment == 'production' %}
+      {% include analytics.html %}
+    {% endif %}
 
   </body>
 </html>
