--- a/_sass/typewriter.sass
+++ b/_sass/typewriter.sass
@@ -109,18 +109,13 @@ p
   &__nav
     color: #aaa
 
-    ul
-      +align-items(stretch)
-      +display(flex)
-      +flex(1)
-      +flex-direction(row-reverse)
-      height: 100%
-
     li
+      display: inline
       list-style: none
-      +display(flex)
-      +flex-direction(column)
-      +justify-content(center)
+
+      &:first-child
+        a[href]
+          margin-left: 0
 
     a[href]
       +margin(0 .8em)
@@ -200,6 +195,28 @@ p
 
 @media only screen and (min-device-width: 568px)
   .site-header
+    &__nav
+      color: #aaa
+
+      ul
+        +align-items(stretch)
+        +display(flex)
+        +flex(1)
+        height: 100%
+
+      li
+        list-style: none
+        +display(flex)
+        +flex-direction(column)
+        +justify-content(center)
+
+        &:first-child
+          a[href]
+            margin-left: .8em
+        &:last-child
+          a[href]
+            margin-right: 0
+
     .wrapper
       +flex-direction(row)
       +justify-content(space-between)
