--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,9 @@
     href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
   <link
     rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Roboto">
+  <link
+    rel="stylesheet"
     href="{{ "/css/main.css" | relative_url }}">
 
 </head>
