Progressive image working

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,5 +26,6 @@
   <link
     rel="stylesheet"
     href="{{ "/css/main.css" | relative_url }}">
-
+  {% progressive_style %}
+  {% progressive_lib %}
 </head>
