--- a/_sass/typewriter.sass
+++ b/_sass/typewriter.sass
@@ -235,3 +235,7 @@ p
     .wrapper
       +flex-direction(row)
       +justify-content(flex-end)
+
+  .picture-shrink
+    +margin(null auto)
+    width: 50%
