--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -328,4 +328,9 @@ p {
       -ms-justify-content: flex-end;
       -o-justify-content: flex-end;
       justify-content: flex-end;
-      -ms-flex-pack: end; } }
+      -ms-flex-pack: end; }
+
+  .picture-shrink {
+    margin-right: auto;
+    margin-left: auto;
+    width: 50%; } }
