--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -29,6 +29,9 @@ h1, h2, h3, h4, h5, h6 {
       background-color: transition !important;
       color: inherit !important; }
 
+p, ul, ol, pre, blockquote, hr, object {
+  margin: 1em 0; }
+
 img {
   border: none;
   max-width: 100%; }
@@ -181,6 +184,11 @@ p {
     margin-bottom: 3em; }
   .page-content img {
     display: block; }
+  .page-content li {
+    margin-bottom: 0.2em;
+    margin-left: 2em; }
+  .page-content p {
+    margin-bottom: 1rem; }
 
 .site-footer {
   color: #ccc;
@@ -248,6 +256,11 @@ p {
   font-size: 14px; }
 
 @media only screen and (min-device-width: 568px) {
+  .main .site-header__nav {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+
   .site-header {
     margin-top: 1rem;
     margin-bottom: 1rem; }
@@ -276,7 +289,7 @@ p {
       -moz-flex: 1;
       -ms-flex: 1;
       flex: 1;
-      height: 100%; }
+      height: auto; }
     .site-header__nav li {
       list-style: none;
       display: -webkit-box;
