Added robots.txt and sitemap.xml. Copyedit.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,18 +7,7 @@ layout: default
       {{ page.title }}
     </h1>
     <p class="post__header__subheading">
-      {{ page.date | date: "%e %B %Y"
-        | replace:"January","Enero"
-        | replace:"February","Febrero"
-        | replace:"March","Marzo"
-        | replace:"May","Mayo"
-        | replace:"June","Junio"
-        | replace:"July","Julio"
-        | replace:"August","Agosto"
-        | replace:"September","Septiembre"
-        | replace:"October","octubre"
-        | replace:"November","noviembre"
-        | replace:"December","Diciembre" }}
+      {% include date.html date=page.date %}
     </p>
   </header>
   {% if page.picture %}
