Removed different date includes.

--- a/_includes/date.html
+++ b/_includes/date.html
@@ -1,4 +1,4 @@
-{{ relato.date | date: "%e %B %Y"
+{{ include.date | date: "%e %B %Y"
 | replace:"January","Enero"
 | replace:"February","Febrero"
 | replace:"March","Marzo"
