--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,5 +26,7 @@
   <link
     rel="stylesheet"
     href="{{ "/css/main.css" | relative_url }}">
-
+  <link
+    rel="stylesheet"
+    href="{{ "/css/syntax.css" | relative_url }}">
 </head>
