About page updated.

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-{{ content }}
+<p>{{site.description}}</p>
 
 <h2>Lo que estoy leyendo ahora</h2>
       <!-- Show static HTML/CSS as a placeholder in case js is not enabled - javascript include will override this if things work -->
@@ -54,7 +54,8 @@ layout: page
     float: right;
   }
   center {
-    flex: 1 0 100%
+    display: none;
+    /* flex: 1 0 100%; */
   }
 
   @media only screen and (min-device-width: 568px) {
@@ -102,3 +103,5 @@ layout: page
 
       </div>
       <script src="https://www.goodreads.com/review/custom_widget/64896106.Enrique's%20bookshelf:%20currently-reading?cover_position=left&cover_size=medium&num_books=5&order=a&shelf=currently-reading&show_author=1&show_cover=1&show_rating=0&show_review=0&show_tags=0&show_title=1&sort=date_added&widget_bg_color=FFFFFF&widget_bg_transparent=true&widget_border_width=1&widget_id=1487339563&widget_text_color=000000&widget_title_size=medium&widget_width=medium" type="text/javascript" charset="utf-8"></script>
+
+{{ content }}
