New short story added.

--- a/_includes/date.html
+++ b/_includes/date.html
@@ -2,6 +2,7 @@
 | replace:"January","Enero"
 | replace:"February","Febrero"
 | replace:"March","Marzo"
+| replace:"April","Abril"
 | replace:"May","Mayo"
 | replace:"June","Junio"
 | replace:"July","Julio"
