New article published.

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -65,31 +65,117 @@ layout: page
   }
 </style>
 
-    <div id="gr_custom_widget_1487339563">
+       <div id="gr_custom_widget_1487339563">
           <div class="gr_custom_container_1487339563">
     <h2 class="gr_custom_header_1487339563">
     <a style="text-decoration: none;" href="https://www.goodreads.com/review/list/64896106-enrique-moriarty?shelf=currently-reading&amp;utm_medium=api&amp;utm_source=custom_widget">Enrique&#39;s bookshelf: currently-reading</a>
     </h2>
       <div class="gr_custom_each_container_1487339563">
           <div class="gr_custom_book_container_1487339563">
-            <a title="La subasta del lote 49" href="https://www.goodreads.com/review/show/1910938541?utm_medium=api&amp;utm_source=custom_widget"><img alt="La subasta del lote 49" border="0" src="https://images.gr-assets.com/books/1347773103m/9821325.jpg" /></a>
-          </div>
-          <div class="gr_custom_title_1487339563">
-            <a href="https://www.goodreads.com/review/show/1910938541?utm_medium=api&amp;utm_source=custom_widget">La subasta del lote 49</a>
-          </div>
-          <div class="gr_custom_author_1487339563">
-            by <a href="https://www.goodreads.com/author/show/235.Thomas_Pynchon">Thomas Pynchon</a>
-          </div>
-      </div>
-      <div class="gr_custom_each_container_1487339563">
-          <div class="gr_custom_book_container_1487339563">
             <a title="Trece monos" href="https://www.goodreads.com/review/show/1911152432?utm_medium=api&amp;utm_source=custom_widget"><img alt="Trece monos" border="0" src="https://images.gr-assets.com/books/1435059505m/25780018.jpg" /></a>
+          </div>
+          <div class="gr_custom_rating_1487339563">
+            <span class=" staticStars"><img src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /></span>
           </div>
           <div class="gr_custom_title_1487339563">
             <a href="https://www.goodreads.com/review/show/1911152432?utm_medium=api&amp;utm_source=custom_widget">Trece monos</a>
           </div>
           <div class="gr_custom_author_1487339563">
             by <a href="https://www.goodreads.com/author/show/1233506.C_sar_Mallorqu_">César Mallorquí</a>
+          </div>
+          <div class="gr_custom_tags_1487339563">
+            tagged:
+            currently-reading
+          </div>
+      </div>
+      <div class="gr_custom_each_container_1487339563">
+          <div class="gr_custom_book_container_1487339563">
+            <a title="Practical Vim: Edit Text at the Speed of Thought" href="https://www.goodreads.com/review/show/1932733944?utm_medium=api&amp;utm_source=custom_widget"><img alt="Practical Vim: Edit Text at the Speed of Thought" border="0" src="https://images.gr-assets.com/books/1336278962m/13607232.jpg" /></a>
+          </div>
+          <div class="gr_custom_rating_1487339563">
+            <span class=" staticStars"><img src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /></span>
+          </div>
+          <div class="gr_custom_title_1487339563">
+            <a href="https://www.goodreads.com/review/show/1932733944?utm_medium=api&amp;utm_source=custom_widget">Practical Vim: Edit Text at the Speed of Thought</a>
+          </div>
+          <div class="gr_custom_author_1487339563">
+            by <a href="https://www.goodreads.com/author/show/5819490.Drew_Neil">Drew Neil</a>
+          </div>
+          <div class="gr_custom_tags_1487339563">
+            tagged:
+            currently-reading
+          </div>
+      </div>
+      <div class="gr_custom_each_container_1487339563">
+          <div class="gr_custom_book_container_1487339563">
+            <a title="Masters of Doom: How Two Guys Created an Empire and Transformed Pop Culture" href="https://www.goodreads.com/review/show/1932756685?utm_medium=api&amp;utm_source=custom_widget"><img alt="Masters of Doom: How Two Guys Created an Empire and Transformed Pop Culture" border="0" src="https://images.gr-assets.com/books/1438591316m/222146.jpg" /></a>
+          </div>
+          <div class="gr_custom_rating_1487339563">
+            <span class=" staticStars"><img src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /></span>
+          </div>
+          <div class="gr_custom_title_1487339563">
+            <a href="https://www.goodreads.com/review/show/1932756685?utm_medium=api&amp;utm_source=custom_widget">Masters of Doom: How Two Guys Created an Empire and Transformed Pop Culture</a>
+          </div>
+          <div class="gr_custom_author_1487339563">
+            by <a href="https://www.goodreads.com/author/show/65730.David_Kushner">David Kushner</a>
+          </div>
+          <div class="gr_custom_tags_1487339563">
+            tagged:
+            currently-reading
+          </div>
+      </div>
+      <div class="gr_custom_each_container_1487339563">
+          <div class="gr_custom_book_container_1487339563">
+            <a title="Clean Code: A Handbook of Agile Software Craftsmanship" href="https://www.goodreads.com/review/show/1980856606?utm_medium=api&amp;utm_source=custom_widget"><img alt="Clean Code: A Handbook of Agile Software Craftsmanship" border="0" src="https://images.gr-assets.com/books/1436202607m/3735293.jpg" /></a>
+          </div>
+          <div class="gr_custom_rating_1487339563">
+            <span class=" staticStars"><img src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /></span>
+          </div>
+          <div class="gr_custom_title_1487339563">
+            <a href="https://www.goodreads.com/review/show/1980856606?utm_medium=api&amp;utm_source=custom_widget">Clean Code: A Handbook of Agile Software Craftsmanship</a>
+          </div>
+          <div class="gr_custom_author_1487339563">
+            by <a href="https://www.goodreads.com/author/show/45372.Robert_C_Martin">Robert C. Martin</a>
+          </div>
+          <div class="gr_custom_tags_1487339563">
+            tagged:
+            currently-reading
+          </div>
+      </div>
+      <div class="gr_custom_each_container_1487339563">
+          <div class="gr_custom_book_container_1487339563">
+            <a title="La horda. Una revolución mágica" href="https://www.goodreads.com/review/show/1980859242?utm_medium=api&amp;utm_source=custom_widget"><img alt="La horda. Una revolución mágica" border="0" src="https://images.gr-assets.com/books/1488401345m/34334736.jpg" /></a>
+          </div>
+          <div class="gr_custom_rating_1487339563">
+            <span class=" staticStars"><img src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /></span>
+          </div>
+          <div class="gr_custom_title_1487339563">
+            <a href="https://www.goodreads.com/review/show/1980859242?utm_medium=api&amp;utm_source=custom_widget">La horda. Una revolución mágica</a>
+          </div>
+          <div class="gr_custom_author_1487339563">
+            by <a href="https://www.goodreads.com/author/show/4548171.Servando_Rocha">Servando Rocha</a>
+          </div>
+          <div class="gr_custom_tags_1487339563">
+            tagged:
+            currently-reading
+          </div>
+      </div>
+      <div class="gr_custom_each_container_1487339563">
+          <div class="gr_custom_book_container_1487339563">
+            <a title="España es sobrenatural" href="https://www.goodreads.com/review/show/2004796995?utm_medium=api&amp;utm_source=custom_widget"><img alt="España es sobrenatural" border="0" src="https://images.gr-assets.com/books/1262501726m/7479855.jpg" /></a>
+          </div>
+          <div class="gr_custom_rating_1487339563">
+            <span class=" staticStars"><img src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /></span>
+          </div>
+          <div class="gr_custom_title_1487339563">
+            <a href="https://www.goodreads.com/review/show/2004796995?utm_medium=api&amp;utm_source=custom_widget">España es sobrenatural</a>
+          </div>
+          <div class="gr_custom_author_1487339563">
+            by <a href="https://www.goodreads.com/author/show/14765453.Mondo_Brutto">Mondo Brutto</a>
+          </div>
+          <div class="gr_custom_tags_1487339563">
+            tagged:
+            currently-reading
           </div>
       </div>
   <br style="clear: both"/>
@@ -102,6 +188,6 @@ layout: page
   </div>
 
       </div>
-      <script src="https://www.goodreads.com/review/custom_widget/64896106.Enrique's%20bookshelf:%20currently-reading?cover_position=left&cover_size=medium&num_books=5&order=a&shelf=currently-reading&show_author=1&show_cover=1&show_rating=0&show_review=0&show_tags=0&show_title=1&sort=date_added&widget_bg_color=FFFFFF&widget_bg_transparent=true&widget_border_width=1&widget_id=1487339563&widget_text_color=000000&widget_title_size=medium&widget_width=medium" type="text/javascript" charset="utf-8"></script>
+      <script src="https://www.goodreads.com/review/custom_widget/64896106.Enrique's%20bookshelf:%20currently-reading?cover_position=left&cover_size=medium&num_books=8&order=a&shelf=currently-reading&show_author=1&show_cover=1&show_rating=1&show_review=1&show_tags=1&show_title=1&sort=date_added&widget_bg_color=FFFFFF&widget_bg_transparent=true&widget_border_width=1&widget_id=1487339563&widget_text_color=000000&widget_title_size=medium&widget_width=medium" type="text/javascript" charset="utf-8"></script>
 
 {{ content }}
