New tale: Victoria de labios azules

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -58,6 +58,9 @@ layout: page
     /* flex: 1 0 100%; */
   }
 
+  .staticStars {
+    display: none;
+  }
   @media only screen and (min-device-width: 568px) {
     .gr_custom_each_container_1487339563 {
       flex: 1 0 50%;
