--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
       </div>
     </main>
 
+    {% include paginator.html %}
     {% include footer.html %}
     {% if jekyll.environment == 'production' %}
       {% include analytics.html %}
