--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,11 +2,16 @@
 
   <div class="wrapper">
 
-    <h1 class="site-header__title">
-      <a href="{{ "/" | relative_url }}">
-        {{ site.html_title }}
-      </a>
-    </h1>
+    <div class="site-header__title">
+      <h1>
+        <a href="{{ "/" | relative_url }}">
+          {{ site.html_title }}
+        </a>
+      </h1>
+      {% if page.autogen == nil  and page.home != true %}
+        <h2><span>{{ page.title }}</span></h2>
+      {% endif %}
+    </div>
 
     <nav class="site-header__nav">
       {% if site.pages %}
@@ -15,9 +20,13 @@
             <a href="/">Hogar</a>
           </li>
           {% for m_page in site.pages reversed %}
-            {% if m_page.title %}
+            {% if m_page.title and
+              m_page.autogen == nil and
+              m_page.home != true and
+              m_page.title != page.title %}
               <li>
-                <a href="{{ m_page.url | relative_url }}">{{ m_page.title }}</a>
+                <a href="{{ m_page.url | relative_url }}">{{ m_page.title
+                  }}</a>
               </li>
             {% endif %}
           {% endfor %}
